--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,9 +12,9 @@
 
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <%= nav_link 'Questionnaires', questionnaires_path %>
-        <%= nav_link 'Answer Packs', answer_packs_path %>
-        <%= nav_link 'Text Answers', text_answers_path %>
+        <%= nav_link 'Surveys', surveys_path %>
+        <%= nav_link 'Survey Answers', survey_answers_path %>
+        <%= nav_link 'Answers', answers_path %>
       </ul>
         
     </div><!--/.navbar-collapse -->
