relations and navigation

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,6 +14,7 @@
       <ul class="nav navbar-nav">
         <%= nav_link 'Surveys', surveys_path %>
         <%= nav_link 'Answers', answers_path %>
+        <%= nav_link 'Responses', responses_path %>
       </ul>
         
     </div><!--/.navbar-collapse -->
