--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,5 +1,11 @@
-<h1>Listing surveys</h1>
+<div ng-controller="SurveyCtrl">
 
+<h1>Listing surveys</h1>
+<div id="survey-list-container">
+  <ul>
+    <li ng-repeat="survey in surveys">{{survey.title}}</li>
+  </ul>
+</div>
 <table>
   <thead>
     <tr>
@@ -25,3 +31,6 @@
 <br>
 
 <%= link_to 'New Survey', new_survey_path %>
+
+
+</div>
