questions to navbar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,6 +15,7 @@
         <%= nav_link 'Surveys', surveys_path %>
         <%= nav_link 'Answers', answers_path %>
         <%= nav_link 'Responses', responses_path %>
+        <%= nav_link 'Questions', questions_path %>
       </ul>
         
     </div><!--/.navbar-collapse -->
