--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :survey %><br>
-    <%= f.text_field :survey %>
+    <%= f.text_field :survey_id %>
   </div>
   <div class="field">
     <%= f.label :kind %><br>
