--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -9,5 +9,6 @@
 	<li><%= question%></li>
 <% end %>
 </ul>
+<%= link_to 'Answer', survey_answer_path(@survey) %> |
 <%= link_to 'Edit', edit_survey_path(@survey) %> |
 <%= link_to 'Back', surveys_path %>
