--- a/app/views/surveys/answer.html.erb
+++ b/app/views/surveys/answer.html.erb
@@ -1,5 +1,5 @@
 <%=  form_for @response do |f| %>
-
+<%= f.hidden_field :survey_id, value:@response.survey_id%>
 <h1> <%= @survey.title %> </h1>
 
 
